--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,28 +1,117 @@
 *{
-    font-family: 'Montserrat', sans-serif;
+    font-family: sans-serif;
     margin: 0;
 }
 
 body {
     text-align: center;
-    position: relative;
 }
 
-h1{
+header{
     top: 0;
     left: 0;
-    color: white;
-    background-color:#3584e4;
+    color: black;
+    background-color: lavender;
     padding: 10px;
     text-align: center;
+}
+
+
+.grid-cartas {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 0px;
+    margin: 0px;
+}
+
+.Carta {
+    width: 20em;
+    color: black;
+    padding: 1em;
+    margin: 1em;
+    border-style: dotted;
+    border-width: 2px;
+    border-color: black;
+    border-radius: 0em;
+}
+
+.Carta-categoria {
+    width: 20em;
+    color: black;
+    padding: 1em;
+    margin: 1em;
+    border-style: dotted;
+    border-width: 2px;
+    border-color: black;
+    border-radius: 0em;
+}
+
+.Carta-categoria-titulo {
+    border-radius: 1em;
+    border-width: 2px;
+    border-style: dotted;
+    text-wrap: nowrap;
+    text-align: center;
+    background-color: inherit;
+    color: inherit;
+    font-weight: normal;
+    padding: 0em 0.5em 0em 0.5em;
+    font-size: 1.5em;
+    letter-spacing: 0em;
+    text-transform: uppercase;
+}
+
+.Carta-titulo {
+    border-radius: 1em;
+    border-width: 2px;
+    border-style: dotted;
+    text-wrap: nowrap;
+    text-align: center;
+    background-color: inherit;
+    color: inherit;
+    font-weight: normal;
+    padding: 0em 0.5em 0em 0.5em;
+    font-size: 1.5em;
+    letter-spacing: 0em;
+}
+
+.Carta-descripcion {
+    color: black;
+    letter-spacing: 0em;
+    font-size: 1em;
+
+}
+
+#Carta1 {
+    background-color: #fcdc83;
+}
+
+#Carta2 {
+    background-color: #d5e0f5;
+}
+
+#Carta3 {
+    background-color: #7e98f7;
+}
+
+#Carta4 {
+    background-color: #d5f5ea;
+}
+
+#Carta5 {
+    background-color: #f2aad3;
+}
+
+#Carta6 {
+    background-color: #b2aaf2;
 }
 
 footer{
     width: 100%;
     position: fixed;
     bottom: 0;
-    color: white;
-    text-align: left;
-    background-color:#3584e4;
-    left: 0;
+    color: black;
+    text-align: right;
+    background-color: lavender;
+    padding: 0.1em;
 }
