--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,15 +5,20 @@
 
 body {
     text-align: center;
+    background-color: snow;
 }
 
 header {
     top: 0;
     left: 0;
-    color: black;
-    background-color: lavender;
-    padding: 10px;
-    text-align: center;
+    color: white;
+    background-color: royalblue;
+    position: sticky;
+    font-weight: normal;
+    padding: 0.5em 0em 0.5em 2em;
+    font-size: 0.7em;
+    text-align: left;
+    margin-bottom: 2em;
 }
 
 .grid-categorias {
@@ -36,29 +41,16 @@ header {
 }
 
 .Carta:hover {
-    box-shadow: 5px 5px gainsboro;
+    box-shadow: 5px 5px black;
     cursor: pointer;
-}
-
-.Carta_proyecto {
-    color: black;
-    padding: 1em;
-    margin: 8px;
-    border-style: none;
-    border-radius: 0 1em 1em 1em;
-    background-color: lavender;
-}
-
-.Carta_proyecto:hover {
-    cursor: pointer;
-    margin: 5px;
-    box-shadow: 5px 5px mediumpurple;
     border-width: 3px;
-    border-color: mediumpurple;
+    border-color: black;
     border-style: solid;
+    background-color: whitesmoke;
+    padding: 0.9em;
 }
 
-.Carta-categoria {
+.Categoria {
     width: 100%/3;
     color: black;
     padding: 1em;
@@ -69,7 +61,7 @@ header {
     border-radius: 0em;
 }
 
-.Carta-categoria-titulo {
+.Categoria-titulo {
     text-wrap: nowrap;
     text-align: center;
     background-color: inherit;
@@ -82,17 +74,26 @@ header {
 }
 
 .Carta-titulo {
-    border-radius: 1em;
+    border-radius: 0em 1em 1em 0em;
     border-width: 1px;
     border-style: none;
     text-wrap: nowrap;
     text-align: left;
     background-color: inherit;
     color: inherit;
-    font-weight: normal;
+    font-weight: bold;
     padding: 0em 0.3em 0em 0.3em;
     font-size: 1.3em;
     letter-spacing: 0em;
+}
+
+.Carta-titulo:hover {
+    box-shadow: 5px 5px black;
+    cursor: pointer;
+    border-width: 3px;
+    border-color: black;
+    border-style: solid;
+    background-color: whitesmoke;
 }
 
 .Carta-descripcion {
@@ -102,7 +103,7 @@ header {
 }
 
 .Carta1 {
-    background-color: beige;
+    background-color: linen;
 }
 
 .Carta2 {
@@ -111,6 +112,45 @@ header {
 
 .Carta3 {
     background-color: #7e98f7;
+}
+
+.Proyecto {
+    color: black;
+    padding: 1em;
+    margin: 8px;
+    border-style: none;
+    border-radius: 0 1em 1em 1em;
+    background-color: linen;
+}
+
+.Proyecto:hover {
+    cursor: pointer;
+    margin: 5px;
+    box-shadow: 5px 5px black;
+    border-width: 3px;
+    border-color: black;
+    border-style: solid;
+    background-color: cornsilk;
+}
+
+.Proyecto-titulo {
+    border-radius: 0em 1em 1em 0em;
+    border-width: 1px;
+    border-style: none;
+    text-wrap: nowrap;
+    text-align: left;
+    background-color: inherit;
+    color: inherit;
+    font-weight: bold;
+    padding: 0em 0.3em 0em 0.3em;
+    font-size: 1.3em;
+    letter-spacing: 0em;
+}
+
+.Proyecto-descripcion {
+    color: black;
+    letter-spacing: 0em;
+    font-size: 1em;
 }
 
 .tag {
