--- a/stylesheet.css
+++ b/stylesheet.css
@@ -188,6 +188,32 @@ header {
     background-color: coral;
 }
 
+.pelota {
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    animation: bounce 1s ease-in-out infinite;
+    animation-fill-mode: both;
+    animation-direction: alternate;
+}
+
+.dot {
+    background-color: black;
+    border-radius: 100%;
+    width: 10px;
+    height: 10px;
+}
+
+@keyframes bounce {
+    from {
+        top: 25%;
+        transform: scaleX(79.5%) scaleY(65%);
+    }
+    to {
+        top: 55%;
+    }
+}
+
 footer {
     width: 100%;
     position: fixed;
