--- a/projects/stylesheet.css
+++ b/projects/stylesheet.css
@@ -1,11 +1,19 @@
 * {
-    font-family: "Poppins", "Helvetica", sans-serif;
+    font-family: "Adwaita Sans Mono", monospace;
     margin: 0;
 }
 
-@font-face {
-    font-family: Poppins; /* set name */
-    src: url(Poppins-Regular.otf); /* url of the font */
+header {
+    color: white;
+    background-color: cadetblue;
+    position: sticky;
+    text-align: left;
+    margin-bottom: 2em;
+    padding: 2px 1em;
+}
+
+a {
+    color: inherit;
 }
 
 body {
@@ -13,55 +21,10 @@ body {
     background-color: white;
 }
 
-header {
-    top: 0;
-    left: 0;
-    color: white;
-    background-color: royalblue;
-    position: sticky;
-    font-weight: normal;
-    padding: 0.5em 0em 0.5em 2em;
-    font-size: 0.7em;
-    text-align: left;
-    margin-bottom: 2em;
-}
-
-.grid-categorias {
-    display: grid;
-    grid-template-columns: auto auto auto;
-}
-
 .grid-proyectos {
     display: grid;
-    grid-template-columns: auto auto;
-    margin: 0%;
-}
-
-.Carta {
-    color: black;
-    padding: 1em;
-    margin: 1em;
-    border-style: none;
-    border-radius: 1em 30em 30em 30em;
-}
-
-.Carta:hover {
-    box-shadow: 5px 5px black;
-    cursor: pointer;
-    border-width: 3px;
-    border-color: black;
-    border-style: solid;
-    padding: 1em;
-    background-color: lightcyan;
-}
-
-.Carta:hover > .Carta-titulo {
-    box-shadow: 5px 5px black;
-    cursor: pointer;
-    border-width: 3px;
-    border-color: black;
-    border-style: solid;
-    background-color: lightcyan;
+    grid-template-columns: auto auto auto;
+    margin: auto;
 }
 
 .Categoria {
@@ -183,70 +146,4 @@ header {
 
 .tag-4 {
     background-color: goldenrod;
-}
-
-.tag-5 {
-    background-color: darkorchid;
-}
-
-.tag-6 {
-    background-color: coral;
-}
-
-.pelota {
-    border-radius: 100%;
-    width: 10px;
-    height: 10px;
-    animation: bounce 3s;
-    animation-iteration-count: infinite;
-    position: relative;
-    padding: 0;
-    margin: 0;
-    display: inline-block;
-}
-
-.dot {
-    background-color: black;
-    border-radius: 100%;
-    width: 10px;
-    height: 10px;
-}
-
-@keyframes bounce {
-    0% {
-        top: 0;
-        -webkit-animation-timing-function: ease-in;
-    }
-    40% {
-    }
-    50% {
-        top: 70%;
-        -webkit-animation-timing-function: ease-out;
-    }
-    55% {
-        top: 80%;
-        -webkit-animation-timing-function: ease-in;
-    }
-    65% {
-        top: 60%;
-        -webkit-animation-timing-function: ease-out;
-    }
-    100% {
-        top: 0;
-        -webkit-animation-timing-function: ease-in;
-    }
-}
-
-#div-carta-extra {
-    height: 100px;
-}
-
-footer {
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    color: black;
-    text-align: right;
-    background-color: lavender;
-    padding: 0.1em;
 }
